Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/preview/classReaderTest/Client.nopreview.out
- compiler.err.preview.feature.disabled.classfile: Bar.class, 18
1 error
